# exiftool_rs

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  publish.yml
benches/: exiftool.rs
checks/: all.ps1
examples/: batch_read.rs  combined.json  generate_structs.rs  preview_json_output.rs  read_all_metadata.rs  read_tag.rs  read_tags_typed.rs  test_random_photos.rs  write_tags.rs
src/: error.rs  execute.rs  exiftool.rs  lib.rs  output_type.rs  utils.rs
src/core/: base_helpers.rs  exiftool.rs  helpers.rs  mod.rs  serde_helpers.rs
src/executors/: mod.rs  single.rs  stay_open.rs
src/parse/: datetime.rs  mod.rs  output_type.rs  parse_output.rs  structs.rs
src/parse_fn/: array_or_int.rs  binary.rs  date.rs  datetime.rs  mod.rs  space_sep.rs  string.rs  string_list.rs  time.rs  u32.rs  undef_or_float.rs
src/structs/: g2.rs  grouped_structs.rs  mod.rs  poging_drie.rs  structs.rs  test.rs
test_data/: g1.json  g2-n.json  g2.json  output.json
