[package]
name = "exiftool"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A wrapper around Phil Harvey's powerful ExifTool."
homepage = "https://github.com/ruurdbijlsma/exiftool-rs"
repository = "https://github.com/ruurdbijlsma/exiftool-rs"
readme = "README.md"
keywords = ["exif", "exiftool", "video", "photo"]
exclude = [
    "test_data",
    ".github",
    "checks",
]

[dependencies]
serde = { version = "1.0", features = ["derive", "serde_derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_path_to_error = { version = "0.1.17", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
thiserror = "2.0.12"

[dev-dependencies]
image = "0.25.6"
walkdir = "2.5.0"

[features]
default = ["full-deserialize"]
full-deserialize = ["tag-deserialize", "serde_path_to_error", "chrono"]
tag-deserialize = ["serde", "serde_json"]