[package]
name = "exiftool"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "A Rust wrapper for ExifTool."
authors = ["Ruurd Bijlsma <ruurd@bijlsma.dev>"]
homepage = "https://github.com/ruurdbijlsma/exiftool-rs"
repository = "https://github.com/ruurdbijlsma/exiftool-rs"
readme = "README.md"
keywords = ["exif", "exiftool", "metadata", "image", "video"]
documentation = "https://docs.rs/exiftool/latest/exiftool/index.html"
exclude = [
    "data",
    ".github",
    "checks",
    ".idea",
]
categories = ["multimedia::images", "multimedia::video", "multimedia::audio", "command-line-utilities"]

[dependencies]
thiserror = "2.0.12"
tempfile = "3.19.1"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = { version = "^1.0.140" }
serde_path_to_error = { version = "^0.1.17" }
chrono = { version = "^0.4.40", features = ["serde"] }
log = "0.4.27"

[dev-dependencies]
image = "0.25"
walkdir = "2.5"
assert_matches = "1.5.0"
criterion = "0.5.1"

[[bench]]
name = "exiftool"
harness = false